--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    {/* Script do Leaflet (Verifique se já existe, geralmente adicionado no index.html ou importado) */}
-    {/* <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" defer></script> */}
-    {/* Chart.js geralmente é importado no componente, não precisa estar aqui */}
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" defer></script>
   </body>
 </html>
